--- a/source/accounts/templates/accounts/sign_up.html
+++ b/source/accounts/templates/accounts/sign_up.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    <h4>{% trans 'Create an account' %}</h4>
+    <h4>{% trans 'Register' %}</h4>
 
     <form method="post">
 
